Fixed broken routes and broken css

--- a/client/src/Components/Categories/categories.css
+++ b/client/src/Components/Categories/categories.css
@@ -21,6 +21,13 @@
   color: var(--primary-color);
 }
 
+.category-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1em;
+}
+
 @media (max-width: 768px) {
   .category-list {
     flex-direction: column;
@@ -45,7 +52,7 @@
   transform: scale(1.05);
   background-color: var(--primary-color);
   color: var(--secondary-color);
-} 
+}
 
 .category:hover p,
 .category.active p {
@@ -64,5 +71,3 @@
     color: var(--secondary-color);
   }
 }
-
-  
